{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 18,
  "lineage": "0224b41b-333e-1b42-c7a7-415bf0c647cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b2178ce88fb76f6",
            "arn": "arn:aws:ec2:us-east-1:975050042636:elastic-ip/eipalloc-03b2178ce88fb76f6",
            "domain": "vpc",
            "id": "eipalloc-03b2178ce88fb76f6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-254-194.compute-1.amazonaws.com",
            "public_ip": "34.234.254.194",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "NATGatewayEIP"
            },
            "tags_all": {
              "Name": "NATGatewayEIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c6ebb5b9bce4ba15",
            "arn": "arn:aws:ec2:us-east-1:975050042636:instance/i-03fa6057974cd1c6f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03fa6057974cd1c6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-custom-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-094e678b2e1e34d57",
            "private_dns": "ip-10-0-2-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.137",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb0d4d797f31370d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0920b44fe2366a3fd",
            "tags": {
              "Name": "PrivateAppServer"
            },
            "tags_all": {
              "Name": "PrivateAppServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cfdfbbf12b1c51fc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.private_ec2_sg",
            "aws_security_group.public_ec2_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.ec2_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c6ebb5b9bce4ba15",
            "arn": "arn:aws:ec2:us-east-1:975050042636:instance/i-0e4dddae41481bb66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4dddae41481bb66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-custom-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-020d2c368b0eddfe6",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-81-208-121.compute-1.amazonaws.com",
            "public_ip": "3.81.208.121",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1963817e1b96ce6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4e11a52059ad77d",
            "tags": {
              "Name": "PublicWebServer"
            },
            "tags_all": {
              "Name": "PublicWebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cfa589b2bbc96816"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.public_ec2_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.ec2_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042636:internet-gateway/igw-0cca81a110c92dcfc",
            "id": "igw-0cca81a110c92dcfc",
            "owner_id": "975050042636",
            "region": "us-east-1",
            "tags": {
              "Name": "MyVPC_IGW"
            },
            "tags_all": {
              "Name": "MyVPC_IGW"
            },
            "vpc_id": "vpc-0286eb51f57405706"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b2178ce88fb76f6",
            "association_id": "eipassoc-0f62aae9b8a312557",
            "connectivity_type": "public",
            "id": "nat-0d09748213d3a81cc",
            "network_interface_id": "eni-0370d836d51d5659c",
            "private_ip": "10.0.1.47",
            "public_ip": "34.234.254.194",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f4e11a52059ad77d",
            "tags": {
              "Name": "MyVPC_NATGW"
            },
            "tags_all": {
              "Name": "MyVPC_NATGW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042636:route-table/rtb-02146c41c3422c0bd",
            "id": "rtb-02146c41c3422c0bd",
            "owner_id": "975050042636",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d09748213d3a81cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0286eb51f57405706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042636:route-table/rtb-08edd907d2e8d543d",
            "id": "rtb-08edd907d2e8d543d",
            "owner_id": "975050042636",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cca81a110c92dcfc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0286eb51f57405706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0288936ac6d0b88cf",
            "region": "us-east-1",
            "route_table_id": "rtb-02146c41c3422c0bd",
            "subnet_id": "subnet-0920b44fe2366a3fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d796bad8180f619a",
            "region": "us-east-1",
            "route_table_id": "rtb-08edd907d2e8d543d",
            "subnet_id": "subnet-0f4e11a52059ad77d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042636:security-group/sg-0cfdfbbf12b1c51fc",
            "description": "Allow SSH from public EC2 and all traffic within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfdfbbf12b1c51fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all traffic from within the VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from Public EC2 Security Group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cfa589b2bbc96816"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_ec2_sg",
            "name_prefix": "",
            "owner_id": "975050042636",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PrivateEC2SG"
            },
            "tags_all": {
              "Name": "PrivateEC2SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0286eb51f57405706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_ec2_sg",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042636:security-group/sg-0cfa589b2bbc96816",
            "description": "Allow SSH and HTTP access to public EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfa589b2bbc96816",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_ec2_sg",
            "name_prefix": "",
            "owner_id": "975050042636",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PublicEC2SG"
            },
            "tags_all": {
              "Name": "PublicEC2SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0286eb51f57405706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042636:subnet/subnet-0920b44fe2366a3fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0920b44fe2366a3fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050042636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "tags_all": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-0286eb51f57405706"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042636:subnet/subnet-0f4e11a52059ad77d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4e11a52059ad77d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050042636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-0286eb51f57405706"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042636:vpc/vpc-0286eb51f57405706",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088014ba4566832b7",
            "default_route_table_id": "rtb-04ba48456a552c6e2",
            "default_security_group_id": "sg-0ded377cc12ef9006",
            "dhcp_options_id": "dopt-0af3096c20a1c6645",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0286eb51f57405706",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ba48456a552c6e2",
            "owner_id": "975050042636",
            "region": "us-east-1",
            "tags": {
              "Name": "MyCustomVPC"
            },
            "tags_all": {
              "Name": "MyCustomVPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}